# llm4codesec-llm-benchmark

./: .gitignore  .gitmodules  COPILOT_INSTRUCTIONS.md  CVEFIXES_IMPLEMENTATION_SUMMARY.md  CVEFIXES_README.md  README.md  benchmark_framework.py  castle_dataset_loader.py  castle_experiments_config.json  check_gpu_setup.py  config_manager.py  cvefixes_experiments_config.json  examples.py  prepare_cvefixes_datasets.py  pyproject.toml  run_benchmark.py  run_castle_benchmark.py  run_castle_experiments.py  run_cvefixes_benchmark.py  setup.py  setup_castle_dataset.py  setup_env.py  test_cvefixes_comprehensive.py  test_cvefixes_integration.py  test_framework.py  test_sample.json
benchmarks/JitVul/: .gitignore
benchmarks/JitVul/data/: few-shots.json
docs/: CASTLE_README.md  CVEFIXES_README.md  JITVUL_README.md
results/cvefixes_experiments/: Qwen_Qwen2.5-7B-Instruct_binary_vulnerability_1749637750.json
results/quick_test/: benchmark_report_20250604_234247.json  predictions_20250604_233702.csv
src/benchmark/: benchmark_framework.py  config_manager.py
src/configs/: castle_experiments_config.json  cvefixes_experiments.json
src/datasets/: __init__.py  data_utils.py  setup_castle_dataset.py  setup_jitvul_dataset.py
src/entrypoints/: __init__.py  check_gpu_setup.py  examples.py  jitvul_experiments_config.json  prepare_cvefixes_datasets.py  run_benchmark.py  run_castle_benchmark.py  run_castle_experiments.py  run_cvefixes_benchmark.py  run_jitvul_batch.py  run_jitvul_benchmark.py  test_framework.py
tests/: test_cvefixes_comprehensive.py  test_cvefixes_dataset.json  test_cvefixes_final.py  test_cvefixes_integration.py
(+316 files in other folders)
