[tool.poetry]
name = "llm4codesec-llm-benchmark"
version = "0.1.0"
description = ""
authors = ["vodkar <boombarah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0"
transformers = ">=4.35.0"
tokenizers = ">=0.14.0"
accelerate = ">=0.24.0"
bitsandbytes = ">=0.41.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
datasets = ">=2.14.0"
tqdm = ">=4.65.0"
psutil = ">=5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
